place dropdown header in a p and align it correctly

--- a/front/src/components/dropdown/Dropdown.module.css
+++ b/front/src/components/dropdown/Dropdown.module.css
@@ -4,9 +4,9 @@
 }
 
 .dropdownHeader {
-    display: block;
+    display: flex;
     width: 100%;
-    height: 44.5px;
+    height: 48px;
     font-size: 2rem;
     border: solid var(--border-colour);
     border-width: 2px 1px 1px 3px;
@@ -15,6 +15,8 @@
     background-color: var(--background-colour);
     box-shadow: var(--searchbar-shadow);
     padding: auto 0;
+    align-items: center;
+    justify-content: center;
 }
 
 .dropdownHeaderSelected {
